Test for increasing temperature now passing

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -12,12 +12,12 @@
   <script src="lib/jasmine-3.5.0/boot.js"></script>
 
   <!-- include source files here... -->
-  <script src="src/fizzBuzz.js"></script>
-
+  <!-- <script src="src/fizzBuzz.js"></script> -->
+  <script src="src/thermostat.js"></script>
   <!-- include spec files here... -->
+  <!-- <script src="spec/fizzBuzzSpec.js"></script> -->
+  <script src="spec/thermostatSpec.js"></script>
   <script src="spec/SpecHelper.js"></script>
-  <script src="spec/fizzBuzzSpec.js"></script>
-
 </head>
 
 <body>
